537 ==> 399071 - "Adjust Time Date" tool shows all times as "00:00:00".
538 ==> 399134 - Progress bar or status when importing from camera/card reader.
539 ==> 399153 - Selecting a picture with a tag and another without that tag, the checkbox is black instead of gray. 
540 ==> 384759 - Can't adjust timestamp of RAW files.
541 ==> 399221 - Cannot scroll in videos by clicking on the progress bar (only by moving the progress slider).
542 ==> 399315 - Horizontal scroll bar aligned to the right by default.
543 ==> 397962 - digiKam 6.0 does not start after install.
544 ==> 399336 - Google maps – "For development purposes only" printed on the map.
545 ==> 399338 - Count of items in Tree Views does not match total number of items.
546 ==> 399292 - Video file datetime not shown correctly after editing.
547 ==> 370553 - Adjust date - not possible to update "digiKam timestamp".
548 ==> 329091 - MySQL : needs to set "max-allowed-packet" server settings from 4.096 to 16.777.216 to prevent Maintenance tool crash.
549 ==> 399406 - digiKam Crash on advance rename.
550 ==> 397386 - Add a separate checkbox to "Show Rating".
551 ==> 335870 - Nexus 4 in PTP mode gets error: The specified camera ("/org/kde/solid/udev/...") is not supported.
552 ==> 399917 - Fails to build with QT5.7.1
553 ==> 399762 - digiKam Geolocation Correlator ignores time offset.
554 ==> 400148 - Files exported in google photos does not have their filename as name, but their date.
555 ==> 373678 - Videos exported in google photos are not available (still processing state).
556 ==> 400139 - Titles are not exported anymore on google photos.
557 ==> 400216 - Components Information window: no standardized uppercase/lowercase.
558 ==> 400217 - Incorrect Video date/time information: shifted by 2 hours.
559 ==> 396961 - Empty space on interface on thumbnail view.
560 ==> 400436 - Crash when saving jpeg files with metadata.
561 ==> 400492 - Rotation does not work.
562 ==> 