@@ -72,6 +72,7 @@ public:
 private Q_SLOTS:
 
     void slotSelectionChanged();
+    void slotUndoLastDeletedItems();
     void slotRestoreSelectedItems();
     void slotRestoreFinished();
     void slotDeleteSelectedItems();
