@@ -38,7 +38,9 @@ class DTrashItemInfo
 public:
 
     explicit DTrashItemInfo();
+
     bool isNull() const;
+    bool operator==(const DTrashItemInfo& itemInfo) const;
 
 public:
 
